--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./set1.html"></a>
+    <a href="./set1.html">Link for set 1</a>
 </body>
 </html>
